--- a/src/subtitulamos/resources/assets/css/upload.scss
+++ b/src/subtitulamos/resources/assets/css/upload.scss
@@ -9,14 +9,16 @@
 #grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-}
-
-#upload-rules {
-  padding: var(--spacing-l);
+  grid-gap: var(--spacing-xxl);
 }
 
 .form-wrap {
+  form {
+    margin-top: var(--spacing-xxl);
+  }
+
   #file-upload-container {
+    width: 100%;
     height: 300px;
     border-radius: var(--standard-border-radius);
     display: flex;
@@ -96,5 +98,12 @@
       font-weight: 500;
       letter-spacing: -0.3px;
     }
+  }
+}
+
+@media all and (max-width: 820px) {
+  #grid {
+    grid-template-columns: 1fr;
+    grid-gap: 0;
   }
 }
